@@ -2,6 +2,7 @@
 -----
 
 * New: Added set_brightness to globally set maximum display brightness
+* New: Added get_buffer_shape to return internal buffer shape
 * Improvement: Clear now resets scroll position
 * Bugfix: Corrected default scroll direction
 * Bugfix: 90 and 270 degree rotations are no longer cropped to 7 pixels wide
